2022.06.05.2 - 패키지 구조 리팩토링 - UserAuth 객체 생성 - User 관련 서비스 구현